--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,31 @@
-name: MkDocs Build and Deploy
+name: Deploy to Vercel
 
 on:
   push:
     branches:
       - main
-    paths:
-      - docs/**
-      - mkdocs.yml
-      - .github/workflows/main.yml
-
-  workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set Up Python
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
-      - name: Install MkDocs and dependencies
+      - name: Install Python Dependencies
         run: |
-          pip install mkdocs-material
-          # Add any other dependencies your project may require
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Build
-        run: mkdocs build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Git
-        run: git init
+      - name: Build MkDocs Site
+        run: |
+          mkdocs build
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
