--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,9 @@
-site_name: c2tz.li
+# Project information
+site_author: c2tz
+site_description: Mes connaissances sous la forme d'une documentation accompagné de tutoriels et agrémenté d'un blog
+site_name: "@c2tz.li"
+site_url: ""
+edit_uri: edit/main/docs/
+
 theme:
   name: material
