test: testing workflow

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,7 +1,4 @@
 {
-  "routes": [
-    { "handle": "filesystem" }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "version": 2,
+  "builds": [{ "src": "site/**/*", "use": "@vercel/static" }]
 }
