--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,29 +24,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Build Documentation
-        run: mkdocs build
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: site
-          path: ./
-
   deploy:
     name: Deploy Documentation
-    needs: build
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - name: Download Artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: site
-          path: ./
+          path: site
 
-      - name: Deploy to Vercel
-        run: npx vercel --yes --token ${{ secrets.VERCEL_TOKEN }} --prod
+      - name: Deploy Documentation
+        run: npx vercel --yes --token ${{ secrets.VERCEL_TOKEN }} --prod --scope ${{ secrets.VERCEL_ORG_ID }} --project ${{ secrets.VERCEL_PROJECT_ID }} --target .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        
+
+
+          
