test: testing workflow

--- a/docs/vercel.json
+++ b/docs/vercel.json
@@ -1,4 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "site/**/*", "use": "@vercel/static" }]
+  "builds": [
+    {
+      "src": "site/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/site/$1"
+    }
+  ]
 }
