--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,12 @@ jobs:
           path: site
 
       - name: Deploy to Vercel
-        run: npx vercel --yes --token ${{ secrets.VERCEL_TOKEN }} --prod
+        run: |
+          if [ "${{ github.actor }}" != "dependabot[bot]" ]; then
+          npx vercel --yes --token ${{ secrets.VERCEL_TOKEN }} --prod
+          else
+          echo "Skipping deployment for Dependabot pull request."
+          fi
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
