fix: dependabot error on pr

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
           path: site
 
       - name: Deploy to Vercel
+        run: |
           if [ "${{ github.actor }}" != "dependabot[bot]" ]; then
           npx vercel --yes --token ${{ secrets.VERCEL_TOKEN }} --prod
           else
