--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Documentation
+name: CBD
 
 on: [pull_request, push]
 
 jobs:
   commitlint:
-    name: Check Commit
+    name: Check
     runs-on: ubuntu-latest
 
     steps:
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Validate current commit (last commit) with commitlint
+      - name: Validate PUSH commits with commitlint
         if: github.event_name == 'push'
         run: npx commitlint --config ./commitlint.config.js --from HEAD~1 --to HEAD --verbose
 
@@ -31,7 +31,8 @@ jobs:
 
 
   build:
-    name: Build Documentation
+    name: Build
+    needs: commitlint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -57,9 +58,9 @@ jobs:
           path: site
 
   deploy-dev:
-    name: Deploy Documentation to Dev
+    name: Deploy Preview (develop)
     needs: build
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
 
     steps:
@@ -77,7 +78,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
   deploy-prod:
-    name: Deploy Documentation to Prod
+    name: Deploy Production (main)
     needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
@@ -91,7 +92,7 @@ jobs:
 
       - name: Deploy to Vercel (Prod)
         run: |
-          npx vercel --prod=true --yes --token ${{ secrets.VERCEL_TOKEN }}
+          npx vercel --prod --yes --token ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
