--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,5 @@ jobs:
 
       - name: Validate PR commits with commitlint
         if: github.event_name == 'pull_request'
-        run: npx commitlint --from ${{ github.event.before }} --to ${{ github.sha }} --verbose
+        run: npx commitlint --from ${{ github.event.pull_request.head.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
