--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install requirements.txt
+      - run: pip install requirements.txt -r
       - run: mkdocs gh-deploy --force
