--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
-    target-branch: develop
+    target-branch: main
   - package-ecosystem: npm
     directory: "/"
     schedule:
       interval: weekly
-    target-branch: develop
+    target-branch: main
   - package-ecosystem: pip
     directory: "/"
     schedule:
-      interval: weekly
-    target-branch: develop
+      interval: daily
+    target-branch: main
