--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-        env:
-          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.MKDOCS_GIT_COMMITTERS_APIKEY }}
-
 
       - name: Configure Git Credentials
         run: |
@@ -46,4 +43,6 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Deploy with MkDocs
-        run: mkdocs gh-deploy --force
+        run: |
+          export MKDOCS_GIT_COMMITTERS_APIKEY=${{ secrets.MKDOCS_GIT_COMMITTERS_APIKEY }}
+          mkdocs gh-deploy --force
