--- a/docs/.authors.yml
+++ b/docs/.authors.yml
@@ -1,5 +1,5 @@
 authors:
   c2tz:
     name: c2tz
-    description: Modérateur
+    description: Obédient créateur de la matière cosmique
     avatar: https://github.com/c2tz.png
